[project]
name = "facedetector"
version = "0.1.0"
description = "Simple Face Detector for Ekspedisi JTA"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "granian>=1.7.6",
    "numpy>=2.2.3",
    "opencv-python>=4.11.0.86",
    "requests>=2.32.3",
]

[dependency-groups]
dev = []
